--- a/main.css
+++ b/main.css
@@ -23,13 +23,12 @@ h1 {
 	color: #6e69c9;
 }
 
-.hero-image {
+
+.hero img {
   display: block;
-  width: 600px;
-  height: 400px;
+  /*width: 50%;*/
+  max-width: 700px;
   margin: 0 auto;
-  background: url(logo.svg) no-repeat;
-  background-size: cover;
 }
 
 
