--- a/main.css
+++ b/main.css
@@ -1,3 +1,17 @@
+@media only screen and (max-width: 767px) and (orientation: portrait) {
+    /* portrait phones */
+		.input-group .form-control {
+			font-size: 14px;
+			padding: 8px;
+		}
+
+		.signup input {
+			font-size: 14px;
+			border: 0;
+		}
+}
+
+
 body {
 	font-family: "museo-sans", sans-serif;
 	letter-spacing: 0.5px;
@@ -8,7 +22,6 @@ h1 {
 	/*margin-top: -1000px;*/
 	opacity: 0.01;
 }
-
 
 .nav span {
 	display: inline-block;
@@ -26,15 +39,19 @@ h1 {
 
 .hero {
 	background: url('/background.svg') repeat #fcfaf2;
+	background-attachment: fixed;
+	padding: 25px;
 }
 
 .hero h2 {
 	color: #ff6d2c;
-  text-align:center;
+	font-weight: 300;
+	text-align: center;
 }
 
 .hero h3 {
 	color: #6e69c9;
+	font-weight: 300;
 	text-align: center;
 }
 
@@ -55,7 +72,7 @@ h1 {
 
 .lineup .speaker-detail {
 	text-align: center;
-	padding: 15px;
+	padding: 16px;
 }
 
 .lineup .speaker a {
@@ -72,6 +89,7 @@ h1 {
 .signup {
 	color: #fcfaf2;
 	background-color: #ffcb39;
+	padding: 25px;
 }
 
 .signup div.email-signup.form-group {
@@ -80,16 +98,31 @@ h1 {
 
 .signup-text {
 	color: white;
-	font-size: 24px;
+	font-size: 28px;
 	font-weight: 100;
 	text-align: center;
+	padding-bottom: 25px;
 }
 
 .signup input {
-	font-size: 24px;
+	font-size: 22px;
+	font-weight: 700;
+	padding: 35px;
+	border: 0;
+}
+
+.signup .input-group-addon {
+	font-size: 22px;
+	font-weight: 700;
+	padding: 0 35px;
+	color: #ffffff;
+	background-color: #273b68;
+	border: 0;
 }
 
 .footer {
 	color: #fcfaf2;
 	background-color: #2896a5;
+	text-align: center;
+	padding: 25px;
 }
