--- a/main.css
+++ b/main.css
@@ -23,7 +23,11 @@ h1 {
 	opacity: 0.01;
 }
 
-.nav span {
+.nav {
+	height: 0;
+}
+
+.nav .tab {
 	display: inline-block;
 	width: 20%;
 	padding: 0;
