--- a/main.css
+++ b/main.css
@@ -14,6 +14,24 @@
 		.hero h2 span {
 			display: block;
 		}
+
+		.hero h2 {
+			font-size: 23px;
+		}
+
+		.hero h3 {
+			font-size: 18px;
+		}
+
+		.blurb {
+			font-size: 16px;
+		}
+
+		.email-signup-form button {
+			height: 37px;
+			margin-left: -5px;
+			font-size: 14px;
+		}
 }
 
 
