--- a/main.css
+++ b/main.css
@@ -1,7 +1,6 @@
 @media only screen and (max-width: 767px) and (orientation: portrait) {
     /* portrait phones */
 		.input-group .form-control {
-			width: 80%;
 			font-size: 14px;
 			padding: 8px;
 		}
@@ -9,6 +8,12 @@
 		.signup input {
 			font-size: 14px;
 			border: 0;
+		}
+
+		.email-signup-form button {
+			height: 37px;
+			margin-left: -5px;
+			font-size: 14px;
 		}
 
 		.hero h2 span {
@@ -25,12 +30,6 @@
 
 		.blurb {
 			font-size: 16px;
-		}
-
-		.email-signup-form button {
-			height: 37px;
-			margin-left: -5px;
-			font-size: 14px;
 		}
 }
 
@@ -134,6 +133,14 @@ h1 {
 .email-signup-form button {
 	height: 71px;
 	margin-left: -5px;
+}
+
+.input-group button {
+	width: 20%;
+}
+
+.input-group input {
+	width: 80%;
 }
 
 .signup-text {
