--- a/main.css
+++ b/main.css
@@ -72,6 +72,7 @@ h1 {
 .hero h2 {
 	color: #ff6d2c;
 	font-weight: 300;
+	/*max-width: 75%;*/
 	text-align: center;
 }
 
@@ -81,11 +82,11 @@ h1 {
 	text-align: center;
 }
 
-.hero img {
+.hero-image img {
   display: block;
-  /*width: 50%;*/
+  /*margin: 0 0 0 -0.5%;*/
   max-width: 700px;
-  margin: 0 auto;
+	margin: 0;
 }
 
 .blurb {
@@ -97,12 +98,12 @@ h1 {
 
 .lineup {
 	color: #ffdcc2;
-	padding: 20px 0;
+	/*padding: 20px 0;*/
 }
 
 .lineup .speaker-detail {
 	text-align: center;
-	padding: 16px;
+	/*padding: 16px;*/
 }
 
 .lineup .speaker a {
