--- a/main.css
+++ b/main.css
@@ -1,36 +1,40 @@
 @media only screen and (max-width: 767px) and (orientation: portrait) {
-    /* portrait phones */
-		.input-group .form-control {
-			font-size: 14px;
-			padding: 8px;
-		}
+	/* portrait phones */
+	.input-group .form-control {
+		font-size: 14px;
+		padding: 8px;
+	}
 
-		.signup input {
-			font-size: 14px;
-			border: 0;
-		}
+	.signup input {
+		font-size: 14px;
+		border: 0;
+	}
 
-		.email-signup-form button {
-			height: 37px;
-			margin-left: -5px;
-			font-size: 14px;
-		}
+	.signup-text {
+		font-size: 20px;
+	}
 
-		.hero h2 span {
-			display: block;
-		}
+	.email-signup-form button {
+		height: 37px;
+		margin-left: -5px;
+		font-size: 14px;
+	}
 
-		.hero h2 {
-			font-size: 23px;
-		}
+	.hero h2 span {
+		display: block;
+	}
 
-		.hero h3 {
-			font-size: 18px;
-		}
+	.hero h2 {
+		font-size: 23px;
+	}
 
-		.blurb {
-			font-size: 16px;
-		}
+	.hero h3 {
+		font-size: 18px;
+	}
+
+	.blurb {
+		font-size: 16px;
+	}
 }
 
 
@@ -106,12 +110,12 @@ h1 {
 
 .lineup {
 	color: #ffdcc2;
-	padding: 5px 0 0;
+	padding: 0 0 10px;
 }
 
 .lineup .speaker-detail {
 	text-align: center;
-	padding: 16px;
+	padding: 0 16px 16px;;
 }
 
 .lineup .speaker a {
@@ -141,11 +145,6 @@ h1 {
 
 .email-signup-form button {
 	height: 71px;
-	margin-left: -5px;
-}
-
-.input-group button {
-	width: 20%;
 }
 
 .input-group input {
