--- a/main.css
+++ b/main.css
@@ -88,9 +88,8 @@ h1 {
 
 .hero-image img {
   display: block;
-  /*margin: 0 0 0 -0.5%;*/
   max-width: 700px;
-	margin: 0;
+	margin: 0 auto;;
 }
 
 .blurb {
