--- a/main.css
+++ b/main.css
@@ -141,6 +141,11 @@ h1 {
 	padding: 25px;
 }
 
+
+.signup-button {
+	text-align: center;
+}
+
 .signup div.email-signup.form-group {
 	width: 20%;
 }
